# teo

./: .gitignore  README.md
PatronPoolObject/: AbstractObjectPool.java  ConcreteObjectFactory.java  ConcreteObjectPool.java  ConcretePoolableObject.java  IObjectFactory.java  IObjectPool.java  IPoolableObject.java  Main.java
entrada/: README.md
entrada/src/: me.cpp  student.cpp  student.h
labs/lab01/: Exercise01.java  UserWelcome.java  exercise_01.cpp  exercise_01.py  exercise_02.cpp  exercise_03.cpp  exercise_04.cpp  exercise_05.cpp  exercise_06.cpp
labs/lab02/: countChangeRecursive.cpp  vuelto.cpp
labs/lab03/: main.cpp
labs/lab04/: README.md
labs/lab04/ColorSelectorApp/: CMakeLists.txt
labs/lab04/ColorSelectorApp/src/: ColorSelectorWindow.cpp  ColorSelectorWindow.h  main.cpp
labs/lab05/: Makefile  ejercicio1.cpp  ejercicio3.pro  main.cpp  moc_ventana.cpp  ventana.cpp  ventana.h
prac07/: README.md
prac07/2. Singleton con recursos compartidos/: README.md  singletonConRecursosCompartidos.cpp
prac07/3. Conexión simulada a base de datos/: ConexionBD.cpp
prac07/Ejercicio 1/: Ejercicio1.cpp
prac07/eje01/: Ejercicio1.cpp  README.md
prac07/eje02/: README.md  recursosCompartidos
prac07/eje03/: Ejercicio3-ConexionBD.cpp  README.md
prac07/eje04/: README.md
prac07/eje05/: Ejercicio5-singleton_threadsafe.cpp  README.md
practica-4/: Main.java  README.md
practica-4/evento/: Certificado.java  Evento.java  Inscripcion.java
practica-4/gestion/: Certificado.java  ComisionOrganizadora.java  Evento.java  Inscripcion.java
(+20 files in other folders)
